<resources>
    <string name="app_name">Aplikasi Pembelajaran Anak</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="mengenal_warna">Mengenal Warna</string>
    <string name="belajar_macam_warna">Belajar Warna</string>
    <string name="mengenal_warna_bentuk">Mengenal Warna Bentuk</string>
    <string name="belajar_bentuk_bangun_datar">Belajar Bentuk Bangun Datar</string>
    <string name="mengenal_warna_angka">Mengenal Warna Angka</string>
    <string name="belajar_mengenai_angka">Belajar Mengenai Angka</string>
    <string name="mengenal_huruf">Mengenal Huruf</string>
    <string name="belajar__macam_macam_huruf">Belajar Macam Macam Huruf</string>
    <string name="start">Start</string>
    <string name="ayo_belajar_nbersama_sama">Ayo Belajar \nBersama Sama</string>
    <string name="belajar_huruf">Belajar Huruf</string>
    <string name="belajar_angka">Belajar Angka</string>
    <string name="belajar_bentuk">Belajar Bentuk</string>
    <string name="belajar_warna">Belajar Warna</string>
    <string name="pilih_permainan_mu">Pilih Permainan Mu!</string>
    <string name="ini_youtube">Ini Youtube</string>
    <string name="merah">Merah</string>
    <string name="tekan_warna_dibawah_ini">Tekan Warna Dibawah Ini</string>
    <string name="coba_lagi">Coba Lagi</string>
    <string name="jawaban_kamu_salah">Jawaban kamu salah :(</string>
    <string name="warna_diatas_adalah_warna_yang_kamu_pilih">Warna diatas adalah warna yang kamu pilih</string>
    <string name="yeah_jawaban_kamu_benar">Yeah Jawaban Kamu Benar !</string>
    <string name="_4_kali">4 Kali</string>
    <string name="total_benar_memilih">Total Benar memilih</string>
    <string name="rincian_jumlah_kesalahan">Rincian Jumlah Kesalahan</string>
    <string name="_10">10</string>
    <string name="total_salah_memilih">Total salah memilih</string>
    <string name="_6_kali">6 Kali</string>
    <string name="finish">FINISH</string>
    <string name="sembilan">Sembilan</string>
    <string name="oke">Oke</string>
    <string name="video_masih_terkunci">Video masih terkunci :(</string>
    <string name="semangat_belajar">Semangat Belajar</string>

</resources>